spacing fix

--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -9,6 +9,7 @@ body {
 }
 
 header {
+	width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
